--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   http_interceptor:
   http:  
   flutter_secure_storage:
-  flutter_socket_io:
+  socket_io_client: ^0.9.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
