--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   http_interceptor:
   http:  
-  flutter_secure_storage:
+  flutter_secure_storage: ^3.3.3
   socket_io_client: ^0.9.11
 
   # The following adds the Cupertino Icons font to your application.
